syntax = "proto3";

package account_proto;

message Account {
    uint64 bills = 1;
    uint64 credits = 2;
    uint64 total_storage_in_bytes = 3;
    uint64 total_mutation_count = 4;
    uint64 total_session_count = 5;
    uint64 nonce = 6;
}